Introduce @StringOrCharacterData Checker Framework qualifier (WIP - downstream build fix needed)
Co-authored-by: veithen <1288573+veithen@users.noreply.github.com>